<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>pom-icy</artifactId>
        <groupId>org.bioimageanalysis.icy</groupId>
        <version>2.1.6</version>
    </parent>

    <artifactId>icy-kernel</artifactId>
    <version>2.5.0</version>

    <packaging>jar</packaging>

    <name>Icy</name>
    <description>Icy is an open community platform for bioimage informatics</description>

    <build>
        <directory>build</directory>
        <defaultGoal>clean install</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>icy/updater/</exclude>
                    </excludes>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>add-resource</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>ext</directory>
                                    <targetPath>${outputDirectory}/icy</targetPath>
                                </resource>
                                <resource>
                                    <directory>.</directory>
                                    <targetPath>${outputDirectory}/icy</targetPath>
                                    <include>CHANGELOG.md</include>
                                    <include>LICENSE</include>
                                    <include>README.md</include>
                                    <include>CONTRIBUTING.md</include>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <excludeGroupIds>sun.jdt,jdk.tools,net.imagej</excludeGroupIds>
                            <outputDirectory>${outputDirectory}/icy/lib</outputDirectory>
                            <stripVersion>${stripVersion}</stripVersion>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <excludeTransitive>true</excludeTransitive>
                        </configuration>
                    </execution>

                    <execution>
                        <id>copy-dependencies-ij</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeArtifactIds>ij</includeArtifactIds>
                            <outputDirectory>${outputDirectory}/icy/ij</outputDirectory>
                            <stripVersion>${stripVersion}</stripVersion>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <excludeTransitive>true</excludeTransitive>
                        </configuration>
                    </execution>

                    <execution>
                        <id>copy-icy-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>${project.packaging}</type>
                                    <outputDirectory>${outputDirectory}/icy</outputDirectory>
                                    <destFileName>icy.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>doc/doc-files</exclude>
                    </excludes>
                    <archive>
                        <manifest>
                            <classpathLayoutType>custom</classpathLayoutType>
                            <!--suppress UnresolvedMavenProperty -->
                            <customClasspathLayout>$${artifact.artifactId}.$${artifact.extension}
                            </customClasspathLayout>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>icy.main.Icy</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-Path>ij/ij.jar</Class-Path>
                        </manifestEntries>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <overview>${basedir}/src/main/javadoc/overview.html</overview>
                    <stylesheetfile>${basedir}/src/main/javadoc/java7doc.css</stylesheetfile>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bioimageanalysis.icy</groupId>
            <artifactId>icy-bioformats</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bioimageanalysis.icy</groupId>
            <artifactId>icy-insubstantial</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bioimageanalysis.icy</groupId>
            <artifactId>icy-vtk</artifactId>
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>ij</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.media</groupId>
            <artifactId>jai-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.sun.media</groupId>
            <artifactId>jai-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-natives-all</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-natives-all</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.jexcelapi</groupId>
            <artifactId>jxl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.swinglabs.swingx</groupId>
            <artifactId>swingx-all</artifactId>
        </dependency>
    </dependencies>

    <!-- Link to third-party Maven repositories -->
    <repositories>
        <repository>
            <id>icy</id>
            <name>Icy's Nexus</name>
            <url>https://icy-nexus.pasteur.fr/repository/Icy/</url>
        </repository>
    </repositories>
</project>